[gd_scene load_steps=3 format=3 uid="uid://bq8dpascomfv3"]

[ext_resource type="Script" uid="uid://bbf45s3q8558f" path="res://options_menu.gd" id="1_4ygv0"]
[ext_resource type="Theme" uid="uid://ddip2yriujj48" path="res://theme.tres" id="1_hyvc0"]

[node name="OptionsMenu" type="PanelContainer" node_paths=PackedStringArray("hard_mode", "cheats", "volume_slider")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -54.0
offset_top = -25.0
offset_right = 54.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_hyvc0")
script = ExtResource("1_4ygv0")
hard_mode = NodePath("MarginContainer/VBoxContainer/HBoxContainer/HardModeCheck")
cheats = NodePath("MarginContainer/VBoxContainer/Cheats/CheatsCheck")
volume_slider = NodePath("MarginContainer/VBoxContainer/HBoxContainer2/HSlider")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "Volume"

[node name="HSlider" type="HSlider" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Hard Mode"

[node name="HardModeCheck" type="CheckButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Cheats" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Cheats"]
layout_mode = 2
size_flags_horizontal = 3
text = "Enable Cheats/Debug Menu"

[node name="CheatsCheck" type="CheckButton" parent="MarginContainer/VBoxContainer/Cheats"]
layout_mode = 2

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="value_changed" from="MarginContainer/VBoxContainer/HBoxContainer2/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/HBoxContainer/HardModeCheck" to="." method="_on_hard_mode_check_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/Cheats/CheatsCheck" to="." method="_on_cheats_check_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
